@@ -28,6 +28,3 @@ Features that should be explored.
 
  - Blame view: Allow names in the author column to be abbreviated to
    initials. Will optimize screen usage for the blame view.
-
- - Blame view: make it possible to jump/load blame for parents. Idea by
-   Jeff King.
